<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    tools:layout_editor_absoluteY="73dp">

    <EditText
        android:id="@+id/nMatricula"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ingreseMatriculaoNumHint"
        android:inputType="text"
        android:shadowColor="#FFFF00"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/nKilometros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nKilometros"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/ingreseKilometrosHint"
        android:inputType="number"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCombustible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nMatricula" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="27dp"
        android:onClick="onClick"
        android:text="@string/buttonCheckTransfer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonExport" />

    <CheckBox
        android:id="@+id/checkTransfer"
        android:layout_width="116dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="16dp"
        android:buttonTint="#F3ED2F"
        android:text="@string/checkTransfer"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/etComentarios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nContrato" />

    <CheckBox
        android:id="@+id/checkNuevoDaño"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="#F3ED2F"
        android:text="@string/checkNuevoDano"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkTransfer"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerCombustible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/SpinnerCombustible"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/nContrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/nKilometros" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="24dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/textoCombustible"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCombustible"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCombustible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerCombustible" />

    <EditText
        android:id="@+id/nContrato"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/ingreseContratoHint"
        android:inputType="number"
        android:numeric="integer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkTransfer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCombustible" />

    <EditText
        android:id="@+id/etComentarios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/ingreseComentariosHint"
        android:inputType="text|textLongMessage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTransfer" />

    <Button
        android:id="@+id/buttonExport"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="24dp"
        android:text="Exportar CSV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>