<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    tools:layout_editor_absoluteY="73dp">

    <EditText
        android:id="@+id/nMatricula"
        android:layout_width="336dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/ingreseMatriculaHint"
        android:inputType="text"
        android:shadowColor="#FFFF00"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/nKilometros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nKilometros"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ingreseKilometrosHint"
        android:inputType="number"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="160dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonCheckCar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkNuevoDaño"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkTransfer"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="#F3ED2F"
        android:text="@string/checkTransfer"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/checkNuevoDaño"
        app:layout_constraintEnd_toStartOf="@+id/checkNuevoDaño"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkNuevoDaño"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="52dp"
        android:buttonTint="#F3ED2F"
        android:text="@string/checkNuevoDano"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nContrato" />

    <Spinner
        android:id="@+id/spinnerCombustible"
        android:layout_width="159dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:entries="@array/SpinnerCombustible"
        android:gravity="center_horizontal|center"
        android:spinnerMode="dialog"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/nContrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="228dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/textoCombustible"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCombustible"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nContrato"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ingreseContratoHint"
        android:inputType="number"
        android:maxLength="9"
        android:numeric="integer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etComentarios"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ingreseComentariosHint"
        android:inputType="text|textLongMessage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkNuevoDaño" />

    <Button
        android:id="@+id/buttonExport"
        android:layout_width="160dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Exportar CSV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etComentarios"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/fechahora"
        android:layout_width="183dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/checkNuevoDaño"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nContrato" />

    <TextView
        android:id="@+id/nVehiculo"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/numVh"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nMatricula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>