<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_settings" />

        <Button
            android:id="@+id/ButtonSetTransfer"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#A9A9A9	"
            android:elevation="6dp"
            android:text="@string/checkTransfer"
            android:textColor="#000000	"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="227dp" />

        <Button
            android:id="@+id/ButtonSearchEntry"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#A9A9A9	"
            android:elevation="6dp"
            android:text="@string/search"
            android:textColor="#000000	"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="140dp" />

        <Button
            android:id="@+id/ButonInsertNewArrive"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="#A9A9A9	"
            android:elevation="6dp"
            android:text="@string/new_vh"
            android:textColor="#000000	"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="53dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>