<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DialFullScreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Holo.Dialog">

    <EditText
        android:id="@+id/matriculaVhFsDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#ffff00"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/ingreseMatriculaHint"
        android:inputType="none"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#ffff00"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#ffff00"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vhNumFsDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFF00"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ingresevhNumHint"
        android:inputType="number"
        android:maxLength="7"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFF00"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matriculaVhFsDialog" />

    <EditText
        android:id="@+id/modelVhFsDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFF00"
        android:ems="10"
        android:hint="@string/ingreseModeloVhHint"
        android:inputType="textCapCharacters"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#ffff00"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vhNumFsDialog" />

</android.support.constraint.ConstraintLayout>